Fixed navbar search form when navbar is collapsed

--- a/Hirundo/Hirundo/App/css/style.css
+++ b/Hirundo/Hirundo/App/css/style.css
@@ -52,6 +52,12 @@ form.navbar-form button {
     background-color: #999999;
 }
 
+@media (min-width: 768px) {
+  form.navbar-form {
+    width: 25%;
+  }
+}
+
 /*page*/
 .page-view {
     padding-top: 25px;
